[gd_scene load_steps=10 format=3 uid="uid://d4icyssydd3i1"]

[ext_resource type="Script" uid="uid://bv0xj0d0etomm" path="res://menus/title/title.gd" id="1_662h8"]
[ext_resource type="AudioStream" uid="uid://oo42vp5s5kv1" path="res://assets/sounds/phone_ring.wav" id="2_7edc8"]
[ext_resource type="Texture2D" uid="uid://cvbovstis44tg" path="res://assets/sprites/phone.png" id="2_dus5x"]

[sub_resource type="Gradient" id="Gradient_ywos0"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.1882353, 0, 0.14509805, 0.3019608)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_662h8"]
gradient = SubResource("Gradient_ywos0")

[sub_resource type="Animation" id="Animation_662h8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(5, 5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(785, 504)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("RichTextLabel:text")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["[font_size=40]Hello, this is a test of something"]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("RichTextLabel:visible_ratio")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Phone:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(159, 1144)]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("CutsceneAudio:stream")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7edc8")]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("CutsceneAudio:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_fhm75"]
resource_name = "start_scene"
length = 20.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1.4666667, 5.9666667, 12.066667, 18.189999),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": ["[font_size=40][shake]*Ring* *Ring*", "[font_size=40]Hello! And again, thank you for agreeing to host Christmas this year at such short notice", "[font_size=40]Don't stay up too late making the place look festive!                                                     But do get the place looking festive, we don't want a repeat of last year", "[font_size=40]For the sake of time, I went ahead and wrapped the presents for you. You are welcome", "[font_size=40]Good night, and see you tomorrow!"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("RichTextLabel:visible_ratio")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.72, 1.4490737, 1.4666667, 4, 5.9266667, 5.9666667, 10, 12.01, 12.066667, 16, 18.15, 18.189999, 19.01),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0, 1.0, 0.0, 1.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Phone:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.35, 0.73, 1.11),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Vector2(159, 1144), Vector2(159, 671), Vector2(159, 697), Vector2(159, 671)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("CutsceneAudio:stream")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("2_7edc8")]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("CutsceneAudio:playing")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0, 1.33),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_ywos0"]
resource_name = "title_screen"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("StartButton:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(5, 5), Vector2(6, 6)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("StartButton:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(785, 504), Vector2(745, 493)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0s0d2"]
_data = {
&"RESET": SubResource("Animation_662h8"),
&"start_scene": SubResource("Animation_fhm75"),
&"title_screen": SubResource("Animation_ywos0")
}

[node name="Title" type="Node2D"]
script = ExtResource("1_662h8")

[node name="TextureRect" type="TextureRect" parent="."]
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("GradientTexture2D_662h8")

[node name="StartButton" type="Button" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 785.0
offset_top = 504.0
offset_right = 849.0
offset_bottom = 536.0005
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(5, 5)
text = "Start"

[node name="CutscenePlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0s0d2")
}
autoplay = "title_screen"

[node name="Phone" type="Sprite2D" parent="."]
position = Vector2(159, 1144)
texture = ExtResource("2_dus5x")

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 169.0
offset_top = 823.0
offset_right = 1717.0
offset_bottom = 1076.0
bbcode_enabled = true
text = "[font_size=40]Hello, this is a test of something"
visible_characters = 0
visible_ratio = 0.0

[node name="CutsceneAudio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("2_7edc8")
volume_db = 12.0

[connection signal="pressed" from="StartButton" to="." method="_on_start_button_pressed"]
[connection signal="animation_finished" from="CutscenePlayer" to="." method="_on_cutscene_player_animation_finished"]
